# ff-intelligent-neo

./: .gitignore  CLAUDE.md  FINAL_FIX_REPORT.md  LICENSE  README.md  app.spec  build.py  dev.bat  en_keys.txt  main.py  pyproject.toml  runCC-DS.bat
.claude/: settings.local.json
core/: app_info.py  auto_editor_api.py  auto_editor_runner.py  batch_runner.py  command_builder.py  config.py  events.py  ffmpeg_runner.py  ffmpeg_setup.py  file_info.py  logging.py  models.py  paths.py  preset_manager.py  process_control.py  task_queue.py  task_runner.py
data/: queue_state.json  settings.json
docs/: BusinessRules.md  PRD-2.0.0 - 1st.md  PRD-2.0.0.md  Procedure.md  Project.md  StateMachine.md  Structure.md  dev_instruction.md  problem-2026-03-30.md
docs/fields/: AppSettings.csv  AudioSubtitleConfig.csv  ClipConfig.csv  Encoder.csv  FilterConfig.csv  MergeConfig.csv  Preset.csv  QueueSummary.csv  Task.csv  TaskConfig.csv  TaskProgress.csv  TranscodeConfig.csv
frontend/: index.html  package.json
presets/: default_presets.json
pywebvue/: app.py  bridge.py
pywebvue-docs/: investigation-2026-03-30.md
references/: 2026-04-26-auto-editor-design.md  DESIGN-about-Overflow.md  PRD-1.0.0.md  PRD-2.0.0-fin.md  PRD-2.1.0.md  PRD-2.2.0.md  command_builder.md  issues-2.0.0.md  issues-2.1.0.md  issues-2.1.1.md  issues-2.1.2.md  issues-2.2.0.md  issues-2.2.1.md  issues-2.2.2.md  issues-2.2.3.md  poblish-2.0.0.md  review-backend-2.2.1.md  review-frontend-2.2.1.md  test-guide-2.2.0.md
scripts/: pre_build.py  verify_suspend_resume.py
test/: test_backend_phase1_6.py
(+96 files in other folders)
