[project]
name = "ff-intelligent-neo"
version = "2.2.0"
description = "FFmpeg batch processing desktop tool"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=6.0",
    "static-ffmpeg",
    "loguru>=0.7",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywebvue", "core"]
